@@ -10,7 +10,9 @@ In this files, you will find changes between java OMiSCID versions.
 +dnssd fix among implementation (coherence in full name ...)
 +dnssd avahi refresh : !!! still not 100% ok (wait for a stable dbus release and java dbus release and/or pure java dbus)
 +uses derefencing in cfg.properties to choose dnssd impl
++added a test !! the first one !!!
         fix:  default "class" variable value is now "Service" as intended
+        fix:  getting a remote variable now properly ask the remote service (wrong caching policy)
 
 
 
